--- a/Eurder/Jenkinsfile
+++ b/Eurder/Jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
+                sh 'cd Eurder'
                 sh 'mvn clean--file *.pom install -DskipTests'
             }
         }
