--- a/Eurder/Jenkinsfile
+++ b/Eurder/Jenkinsfile
@@ -9,8 +9,8 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'cd Eurder'
-                sh 'mvn install -DskipTests'
+                //sh 'cd Eurder'
+                sh 'mvn clean --file *.pom install -DskipTests'
             }
         }
         stage('Test-Stage') {
