[IMP] - GLOBAL - Trying to have Jenkins build - Eurder/pom.xml also in test

--- a/Eurder/Jenkinsfile
+++ b/Eurder/Jenkinsfile
@@ -9,14 +9,12 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                //sh 'cd Eurder'
                 sh 'mvn -f Eurder/pom.xml clean install -DskipTests'
             }
         }
         stage('Test-Stage') {
             steps {
-                sh 'cd Eurder'
-                sh 'mvn test'
+                sh 'mvn -f Eurder/pom.xml test'
             }
         }
     }
