--- a/Eurder/Jenkinsfile
+++ b/Eurder/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         }
         stage('Test-Stage') {
             steps {
-                sh 'mvn -f Eurder/pom.xml test'
+                sh 'mvn test'
             }
         }
     }
